# global-mangrove-watch

./: CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  build  cibuild  console  lint  stac  test
docs/: example.ipynb
examples/: collection.json
examples/GMW_N26W082_2020_v3/: GMW_N26W082_2020_v3.json
scripts/: test  update-examples
src/stactools/global_mangrove_watch/: __init__.py  commands.py  constants.py  stac.py
tests/: test_commands.py  test_stac.py
tests/data/: GMW_N26W082_1996_v3.tif  GMW_N26W082_2020_v3.tif  GMW_N26W082_chng_f1996_t2020_v3.tif
