[project]
name = "stactools-global-mangrove-watch"
version = "0.2.1"
description = "A stactools package for the Global Mangrove Watch dataset"
readme = "README.md"
authors = [{ name = "Henry Rodman", email = "henry@developmentseed.org" }]
maintainers = [{ name = "Henry Rodman", email = "henry@developmentseed.org" }]
keywords = ["stactools", "pystac", "catalog", "STAC", "mangrove"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "semver>=3.0.4",
    "shapely>=2.0.7",
    "stactools>=0.4.0",
]

[dependency-groups]
dev = [
    "codespell~=2.3",
    "mypy~=1.10",
    "pre-commit~=4.0",
    "pytest-cov~=6.0",
    "pytest~=8.2",
    "requests~=2.32",
    "ruff==0.8.3",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "jupyterlab>=4.3.5",
]
docs = ["pystac~=1.10", "ipykernel~=6.29", "jinja2~=3.1"]

[project.urls]
Github = "https://github.com/stactools-packages/global-mangrove-watch"
Issues = "https://github.com/stactools-packages/global-mangrove-watch/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
strict = true
mypy_path = "src"

[tool.ruff]
lint.select = ["E", "F", "I"]
